--- a/translate.html
+++ b/translate.html
@@ -20,7 +20,7 @@ span.ar:after{
 }
 
 body{
-	background-image: url("party.jpg");
+	background-image: url("https://github.com/ANGELperfect/translate/blob/master/party.jpg");
 	background-attachment: fixed;
 	background-size:cover;
 	justify-content: center;
