--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ span.ar:after{
 }
 
 body{
-	background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpicserio.com%2Fblue-wallpaper%2F2292761.html&psig=AOvVaw19X027nYy5BM5ei812LY91&ust=1585603418976000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjgxJfPwOgCFQAAAAAdAAAAABAD");
+	background-image: url("party.jpg");
 	background-attachment: fixed;
 	background-size:cover;
 	justify-content: center;
